--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,7 +6,7 @@ repository: https://github.com/Meet-7-dating/m7_livelyness_detection/
 issue_tracker: https://github.com/Meet-7-dating/m7_livelyness_detection/issues
 
 environment:
-  sdk: '>=2.18.6 <3.0.0'
+  sdk: ">=2.18.6 <3.0.0"
   flutter: ">=2.5.0"
 
 dependencies:
@@ -18,7 +18,7 @@ dependencies:
   equatable: ^2.0.5
   flutter:
     sdk: flutter
-  google_mlkit_face_detection: ^0.5.0
+  google_mlkit_face_detection: ^0.8.0
   image: ^4.0.15
   lottie: ^2.2.0
   path_provider: ^2.0.14
