--- a/example/ios/Flutter/Generated.xcconfig
+++ b/example/ios/Flutter/Generated.xcconfig
@@ -1,14 +1,15 @@
 // This is a generated file; do not edit or check into version control.
 FLUTTER_ROOT=/Users/alitokhtarbay/Development/flutter
-FLUTTER_APPLICATION_PATH=/Users/alitokhtarbay/Desktop/m7_livelyness_detection-0.0.6+4/example
+FLUTTER_APPLICATION_PATH=/Users/alitokhtarbay/Desktop/livelyness_detection/example
 COCOAPODS_PARALLEL_CODE_SIGN=true
-FLUTTER_TARGET=lib/main.dart
+FLUTTER_TARGET=/Users/alitokhtarbay/Desktop/livelyness_detection/example/lib/main.dart
 FLUTTER_BUILD_DIR=build
 FLUTTER_BUILD_NAME=1.0.0
 FLUTTER_BUILD_NUMBER=1
 EXCLUDED_ARCHS[sdk=iphonesimulator*]=i386
 EXCLUDED_ARCHS[sdk=iphoneos*]=armv7
+DART_DEFINES=RkxVVFRFUl9XRUJfQVVUT19ERVRFQ1Q9dHJ1ZQ==,RkxVVFRFUl9XRUJfQ0FOVkFTS0lUX1VSTD1odHRwczovL3d3dy5nc3RhdGljLmNvbS9mbHV0dGVyLWNhbnZhc2tpdC8xYWM2MTFjNjRlYWRiZDkzYzVmNWFiYTU0OTRiOGZjM2IzNWVlOTUyLw==
 DART_OBFUSCATION=false
 TRACK_WIDGET_CREATION=true
 TREE_SHAKE_ICONS=false
-PACKAGE_CONFIG=.dart_tool/package_config.json
+PACKAGE_CONFIG=/Users/alitokhtarbay/Desktop/livelyness_detection/example/.dart_tool/package_config.json
