--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,20 +11,29 @@ environment:
 
 dependencies:
   animate_do: ^3.0.2
-  # camera: ^0.10.2+1
   camera: ^0.10.4
   camerawesome: ^1.4.0
   collection: ^1.17.0
   equatable: ^2.0.5
   flutter:
     sdk: flutter
-  google_mlkit_face_detection: ^0.8.0
-  image: ^4.0.15
-  lottie: ^2.2.0
+  google_mlkit_face_detection: ^0.5.0
   path_provider: ^2.0.14
-  plugin_platform_interface: ^2.1.3
-  rxdart: ^0.27.7
-  uuid: ^3.0.7
+  # animate_do: ^3.0.2
+  # # camera: ^0.10.2+1
+  # camera: ^0.10.4
+  # camerawesome: ^1.4.0
+  # collection: ^1.17.0
+  # equatable: ^2.0.5
+  # flutter:
+  #   sdk: flutter
+  # google_mlkit_face_detection: ^0.8.0
+  # image: ^4.0.15
+  # lottie: ^2.2.0
+  # path_provider: ^2.0.14
+  # plugin_platform_interface: ^2.1.3
+  # rxdart: ^0.27.7
+  # uuid: ^3.0.7
 
 dependency_overrides:
   # camera_android:
